# s3ers

./: .clippy.toml  .envrc  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  flake.nix  s3ers.conf
.cargo/: config.toml
crates/poc/: Cargo.toml
crates/poc/src/: main.rs
crates/s3ers/: Cargo.toml
crates/s3ers-api/: CHANGELOG.md  Cargo.toml  README.md
crates/s3ers-api-macros/: Cargo.toml
crates/s3ers-api-macros/src/: api.rs  attribute.rs  auth_scheme.rs  lib.rs  request.rs  response.rs  util.rs
crates/s3ers-api-macros/src/api/: metadata.rs  mod.rs  request.rs  response.rs
crates/s3ers-api-macros/src/request/: incoming.rs  mod.rs  outgoing.rs
crates/s3ers-api-macros/src/response/: incoming.rs  mod.rs  outgoing.rs
crates/s3ers-api/src/: error.rs  lib.rs
crates/s3ers-api/tests/: conversions.rs  header_override.rs  manual_endpoint_impl.rs  no_fields.rs  optional_headers.rs  s3ers_api_lifetime.rs  s3ers_api_macros.rs
crates/s3ers-api/tests/ui/: 01-api-sanity-check.rs  02-invalid-path.rs  02-invalid-path.stderr  03-move-value.rs  04-attributes.rs  04-attributes.stderr  05-request-only.rs  06-response-only.rs  07-error-type-attribute.rs  07-error-type-attribute.stderr
crates/s3ers-client/: Cargo.toml
crates/s3ers-client/src/: client_api.rs  error.rs  http_client.rs  lib.rs
crates/s3ers-s3-api/: Cargo.toml
crates/s3ers-s3-api/src/: error.rs  lib.rs  objects.rs
crates/s3ers-s3-api/src/objects/: list_objects.rs
crates/s3ers-s3-api/src/objects/list_objects/: v1.rs  v2.rs
crates/s3ers-serde/: Cargo.toml  README.md
crates/s3ers-serde-macros/: Cargo.toml
crates/s3ers-serde-macros/src/: attr.rs  case.rs  deserialize_from_cow_str.rs  enum_as_ref_str.rs  enum_from_string.rs  lib.rs  ord_as_ref_str.rs  outgoing.rs  serialize_as_ref_str.rs  util.rs
crates/s3ers-serde-xml/: Cargo.toml
crates/s3ers-serde-xml/src/: de.rs
crates/s3ers-serde/src/: base64.rs  buf.rs  canonical_json.rs  cow.rs  empty.rs  lib.rs  raw.rs  strings.rs
crates/s3ers-serde/src/canonical_json/: value.rs
crates/s3ers-serde/src/duration/: opt_ms.rs  secs.rs
crates/s3ers-serde/src/urlencoded/: de.rs  ser.rs
crates/s3ers-serde/src/urlencoded/de/: val_or_vec.rs
crates/s3ers-serde/src/urlencoded/ser/: pair.rs  part.rs  value.rs
crates/s3ers-serde/tests/: empty_strings.rs  enum_derive.rs  url_deserialize.rs  url_serialize.rs
crates/s3ers/src/: lib.rs
