[package]
name = "poc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
http = "*"
reqwest = { version = "*", features = ["blocking"] }
quick-xml = { version = "0.23.0-alpha3", features = ["serialize"] }
serde = { version = "*", features = ["derive"] }
sha2 = "*"
chrono = "*"
hmac = "*"
