[package]
authors = [
    "Marc 'risson' Schmitt <marc.schmitt@risson.space>",
    "Sevan 'Byh0ki' Murriguian-Watrin <murrig_s@epita.fr>",
]
categories = ["api-bindings", "filesystem", "web-programming"]
description = "A procedural macro for generating s3ers-api Endpoints."
homepage = "https://gitlab.com/s3ers/s3ers"
keywords = ["aws", "s3"]
license-file = "../../LICENSE"
name = "s3ers-api"
publish = false # this is not ready yet
readme = "../../README.md"
repository = "https://gitlab.com/s3ers/s3ers"
version = "0.0.1"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "*"
proc-macro2 = "*"
quote = "*"
syn = { version = "*", features = ["full", "visit"] }
