[package]
authors = [
    "Marc 'risson' Schmitt <marc.schmitt@risson.space>",
    "Sevan 'Byh0ki' Murriguian-Watrin <murrig_s@epita.fr>",
]
categories = ["api-bindings", "filesystem", "web-programming"]
description = "A procedural macro for generating s3ers-api Endpoints."
homepage = "https://gitlab.com/s3ers/s3ers"
keywords = ["aws", "s3", "s3ers"]
license-file = "../../LICENSE"
name = "s3ers-api-macros"
readme = "../../README.md"
repository = "https://gitlab.com/s3ers/s3ers"
version = "0.0.1"
edition = "2021"

[lib]
proc-macro = true

[features]

[dependencies]
proc-macro-crate = "1.1.0"
proc-macro2 = "1.0.36"
quote = "1.0.14"
syn = { version = "1.0.85", features = ["full", "visit"] }
