[package]
authors = [
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Jonas Platte <jplatte@posteo.de>",
]
categories = ["api-bindings", "web-programming"]
description = "An abstraction for Matrix API endpoints."
homepage = "https://www.s3ers.io/"
keywords = ["matrix", "chat", "messaging", "s3ers"]
license = "MIT"
name = "s3ers-api"
readme = "README.md"
repository = "https://github.com/s3ers/s3ers"
version = "0.18.5"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# These feature gates exist only for the tests. Disabling them results in a
# compile error.
[features]
default = ["client", "server"]
client = []
server = []

[dependencies]
bytes = "1.0.1"
http = "0.2.2"
percent-encoding = "2.1.0"
s3ers-api-macros = { version = "0.0.1", path = "../s3ers-api-macros" }
s3ers-serde = { version = "0.5.0", path = "../s3ers-serde" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
thiserror = "1.0.26"

[dev-dependencies]
trybuild = "1.0.38"
