[package]
authors = [
    "Marc 'risson' Schmitt <marc.schmitt@risson.space>",
    "Sevan 'Byh0ki' Murriguian-Watrin <murrig_s@epita.fr>",
]
categories = ["api-bindings", "filesystem", "web-programming"]
description = "An abstraction for S3 API endpoints."
homepage = "https://gitlab.com/s3ers/s3ers"
keywords = ["aws", "s3", "s3ers"]
license-file = "../../LICENSE"
name = "s3ers-api"
readme = "../../README.md"
repository = "https://gitlab.com/s3ers/s3ers"
version = "0.0.1"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# These feature gates exist only for the tests. Disabling them results in a
# compile error.
[features]
default = ["client", "server"]
client = []
server = []

[dependencies]
bytes = "1.0.1"
http = "0.2.2"
percent-encoding = "2.1.0"
s3ers-api-macros = { path = "../s3ers-api-macros", version = "0.0.1" }
s3ers-serde = { path = "../s3ers-serde", version = "0.0.1" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
thiserror = "1.0.26"

[dev-dependencies]
trybuild = "1.0.38"
