[package]
authors = [
    "Marc 'risson' Schmitt <marc.schmitt@risson.space>",
    "Sevan 'Byh0ki' Murriguian-Watrin <murrig_s@epita.fr>",
]
categories = ["api-bindings", "filesystem", "web-programming"]
description = "A S3 client library."
homepage = "https://gitlab.com/s3ers/s3ers"
keywords = ["aws", "s3", "s3ers"]
license-file = "../../LICENSE"
name = "s3ers-client"
readme = "../../README.md"
repository = "https://gitlab.com/s3ers/s3ers"
version = "0.0.1"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
s3-api = ["s3ers-s3-api"]

# HTTP clients
hyper-native-tls = ["hyper", "hyper-tls"]
hyper-rustls = ["hyper", "hyper-rustls-crate"]
isahc = ["isahc-crate", "futures-lite"]
reqwest-native-tls = ["reqwest", "reqwest/native-tls"]
reqwest-native-tls-alpn = ["reqwest", "reqwest/native-tls-alpn"]
reqwest-native-tls-vendored = ["reqwest", "reqwest/native-tls-vendored"]
reqwest-rustls-manual-roots = ["reqwest", "reqwest/rustls-tls-manual-roots"]
reqwest-rustls-webpki-roots = ["reqwest", "reqwest/rustls-tls-webpki-roots"]
reqwest-rustls-native-roots = ["reqwest", "reqwest/rustls-tls-native-roots"]

[dependencies]
assign = "1.1.1"
async-stream = "0.3.0"
async-trait = "0.1.50"
bytes = "1.0.1"
futures-core = "0.3.8"
futures-lite = { version = "1.11.3", optional = true }
http = "0.2.2"
hyper = { version = "0.14.2", features = ["client", "http1", "http2", "tcp"], optional = true }
hyper-rustls-crate = { package = "hyper-rustls", version = "0.22.1", default-features = false, optional = true }
hyper-tls = { version = "0.5.0", optional = true }
isahc-crate = { package = "isahc", version = "1.3.1", optional = true }
reqwest = { version = "0.11.4", default-features = false, optional = true }
s3ers-api = { path = "../s3ers-api", version = "0.0.1" }
s3ers-s3-api = { path = "../s3ers-s3-api", version = "0.0.1", features = ["client"], optional = true }
s3ers-serde = { path = "../s3ers-serde", version = "0.0.1" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"

[dev-dependencies]
s3ers-s3-api = { version = "0.0.1", path = "../s3ers-s3-api", features = ["client"] }
tokio-stream = "0.1.8"
