[package]
authors = [
    "Marc 'risson' Schmitt <marc.schmitt@risson.space>",
    "Sevan 'Byh0ki' Murriguian-Watrin <murrig_s@epita.fr>",
]
categories = ["api-bindings", "filesystem", "web-programming"]
description = "Types for the endpoints in the S3 API."
homepage = "https://gitlab.com/s3ers/s3ers"
keywords = ["aws", "s3", "s3ers"]
license-file = "../../LICENSE"
name = "s3ers-s3-api"
readme = "../../README.md"
repository = "https://gitlab.com/s3ers/s3ers"
version = "0.0.1"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
unstable-exhaustive-types = []
client = []
server = []

[dependencies]
assign = "1.1.1"
bytes = "1.0.1"
http = "0.2.2"
js_int = { version = "0.2.0", features = ["serde"] }
maplit = "1.0.2"
percent-encoding = "2.1.0"
s3ers-api = { path = "../s3ers-api", version = "0.0.1" }
s3ers-serde = { path = "../s3ers-serde", version = "0.0.1" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"

[dev-dependencies]
matches = "0.1.8"
