[package]
authors = ["Jonas Platte <jplatte@posteo.de>"]
categories = ["api-bindings", "web-programming"]
description = "Procedural macros for s3ers-serde."
homepage = "https://www.s3ers.io/"
keywords = ["matrix", "chat", "messaging", "s3ers"]
license = "MIT"
name = "s3ers-serde-macros"
repository = "https://github.com/s3ers/s3ers"
version = "0.5.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "1.0.0"
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = { version = "1.0.55", features = ["full"] }
