[package]
authors = [
    "Marc 'risson' Schmitt <marc.schmitt@risson.space>",
    "Sevan 'Byh0ki' Murriguian-Watrin <murrig_s@epita.fr>",
]
description = "Wrapper around quick-xml for other s3ers crates."
homepage = "https://gitlab.com/s3ers/s3ers"
license-file = "../../LICENSE"
name = "s3ers-serde-xml"
publish = false # this is not ready yet
readme = "../../README.md"
repository = "https://gitlab.com/s3ers/s3ers"
version = "0.0.1"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]

[dependencies]
quick-xml = { version = "0.22.0", features = ["serialize"] }
serde = { version = "1.0.133", features = ["derive"] }

[dev-dependencies]
